# low-latency-matching-engine

./: .gitattributes  .gitignore  CMakeLists.txt  PROJECT_HISTORY.md  TIMELINE.md  readme.md  requirements.txt
benchmark/: CMakeLists.txt
benchmark/runner/: benchmark_runner.cpp
benchmark/scripts/: merge_benchmark_metrics.py  plot_benchmark.py  plot_hft_macro_scenarios.py  plot_version_comparison.py  run_benchmarks.sh  run_hft_macro_op_profile.sh  run_hft_macro_scenarios.sh  run_remote_bench.sh  run_remote_compare.sh  run_remote_ring_size_sweep.sh  (+1 more)
build-verify/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
core/order_entry/: CMakeLists.txt
core/order_entry/examples/: blocking_client.cpp  blocking_echo_bench_client.cpp  blocking_echo_bench_server.cpp  blocking_server.cpp  epoll_server.cpp
core/order_entry/include/order_entry/: codec.hpp  protocol.hpp
core/order_entry/tests/: test.cpp
report/: order_entry_protocol_codec_design.md  phase10_progress.md  phase11_lto_pgo_results.md  phase1_vs_phase2_report.md  phase2b_vs_phase2c_report.md  phase2c_vs_phase2d_report.md  phase4_hft_macro_optimization_priority.md  phase4_price_level_storage_strategy.md  phase5_macro_profiling_plan.md  phase6_benchmark_handle_migration.md  phase6_devalidation_branch_rollout.md  phase6_engine_handle_refactor_plan.md  phase7_benchmark_results.md  phase7_hot_ring_cold_map_design.md  phase8_array_side_book_results.md  phase8_fixed_array_design.md  phase9_per_scenario_benchmark.md  phase_evolution_phase1_to_phase6.md  plot_overall_comparison.py
(+80 files in other folders)
